tests/errors/runtime.NumberOutOfPermittedRange.res
4971686001999928811495395286003958158799180199238035119122039624929784892827826032702040415689327455938137756429705352304829984959844748840402820533688590392511431251018595048700814231003767708869076971755546723237578934123417714016936765899776
>> Runtime | File: runtime.NumberOutOfPermittedRange.art
     error | Line: 3
           | 
           | invalid operation pow
           | between: :integer
           | and: :integer (big)